[gd_scene load_steps=43 format=3 uid="uid://erblgpr62p4j"]

[ext_resource type="Script" path="res://scripts/Slime_boss.gd" id="1_7ydd8"]
[ext_resource type="Script" path="res://Characters/Bosses/SlimeBossFSM.gd" id="2_kkss8"]
[ext_resource type="Texture2D" uid="uid://nhc6rwvnqitp" path="res://Characters/Bosses/slime shadow.png" id="3_pi5rh"]
[ext_resource type="Texture2D" uid="uid://bdytvigbvbyqs" path="res://Characters/Bosses/enemy_afterdead_explosion_anim_spritesheet.png" id="4_qupue"]
[ext_resource type="Texture2D" uid="uid://cp8u6omghiq32" path="res://Characters/Bosses/slime_idle_spritesheet.png" id="5_w2sah"]
[ext_resource type="Texture2D" uid="uid://0qqsbnga0p5k" path="res://Characters/Bosses/slime_run_spritesheeet.png" id="6_kd3b4"]
[ext_resource type="Script" path="res://Characters/Bosses/Hitbox.gd" id="7_hxwed"]
[ext_resource type="PackedScene" uid="uid://c0jp3kux13enq" path="res://Scenes/attack_box.tscn" id="8_lwnm7"]
[ext_resource type="Script" path="res://scripts/attack_box.gd" id="9_v37k0"]

[sub_resource type="Animation" id="Animation_k8s82"]
resource_name = "chase"

[sub_resource type="Animation" id="19"]
resource_name = "dead"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["jump", "dead explosion"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"duplicate_slime"
}, {
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="20"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="21"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="22"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -8), Vector2(0, -8), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qub80"]
resource_name = "projectile_attack"

[sub_resource type="Animation" id="Animation_f0blj"]
resource_name = "slide_attack"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ny0p"]
_data = {
"chase": SubResource("Animation_k8s82"),
"dead": SubResource("19"),
"hurt": SubResource("20"),
"idle": SubResource("21"),
"jump": SubResource("22"),
"projectile_attack": SubResource("Animation_qub80"),
"slide_attack": SubResource("Animation_f0blj")
}

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("4_qupue")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("4_qupue")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("4_qupue")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("4_qupue")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("5_w2sah")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("5_w2sah")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("5_w2sah")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("5_w2sah")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("5_w2sah")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("5_w2sah")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("6_kd3b4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("6_kd3b4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("6_kd3b4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("6_kd3b4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("6_kd3b4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("6_kd3b4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_auvxs"]
atlas = ExtResource("6_kd3b4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n136n"]
atlas = ExtResource("6_kd3b4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7xj5"]
atlas = ExtResource("6_kd3b4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2avx"]
atlas = ExtResource("6_kd3b4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fawe3"]
atlas = ExtResource("6_kd3b4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_daaul"]
atlas = ExtResource("6_kd3b4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y1r1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}],
"loop": true,
"name": &"dead explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auvxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n136n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7xj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2avx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fawe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daaul")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mnqag"]
radius = 4.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6l6vc"]
radius = 8.0
height = 20.0

[node name="SlimeBoss" type="CharacterBody2D"]
script = ExtResource("1_7ydd8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ny0p")
}

[node name="FSM" type="Node" parent="."]
script = ExtResource("2_kkss8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.705882)
texture = ExtResource("3_pi5rh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y1r1p")
animation = &"jump"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mnqag")

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 177
collision_mask = 255
script = ExtResource("7_hxwed")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6l6vc")
disabled = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="HurtTimer" type="Timer" parent="."]

[node name="AttackBox" parent="." instance=ExtResource("8_lwnm7")]
script = ExtResource("9_v37k0")

[connection signal="animation_finished" from="AnimationPlayer" to="FSM" method="_on_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
